<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tableLayout"
    android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/artist"
                android:textStyle="bold"
                android:id="@+id/artistLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/artist"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/venue"
                android:textStyle="bold"
                android:id="@+id/venueLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/venue"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/date"
                android:textStyle="bold"
                android:id="@+id/dateLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/date"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/category"
                android:textStyle="bold"
                android:id="@+id/categoryLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/category"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/priceRange"
                android:textStyle="bold"
                android:id="@+id/priceRangeLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/priceRange"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/ticketStatus"
                android:textStyle="bold"
                android:id="@+id/ticketStatusLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ticketStatus"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/buyTicketAt"
                android:textStyle="bold"
                android:id="@+id/buyTicketAtLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColorLink="@color/purple_700"
                android:id="@+id/buyTicketAt"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/seatMap"
                android:textStyle="bold"
                android:id="@+id/seatMapLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColorLink="@color/purple_700"
                android:id="@+id/seatMap"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    </ScrollView>
</RelativeLayout>