<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VenueFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/venueTableLayout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:id="@+id/nameLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/address"
                android:textStyle="bold"
                android:id="@+id/addressLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/city"
                android:textStyle="bold"
                android:id="@+id/cityLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/phoneNo"
                android:textStyle="bold"
                android:id="@+id/phoneNoLabel"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNo"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/openHours"
                android:textStyle="bold"
                android:id="@+id/openHoursLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/openHours"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/generalRule"
                android:textStyle="bold"
                android:id="@+id/generalRuleLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/generalRule"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/childRule"
                android:textStyle="bold"
                android:id="@+id/childRuleLabel"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/childRule"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_span="2"
                tools:context=".VenueMapInduced"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    </ScrollView>
</RelativeLayout>